--- a/time-travel/app/views/posts/index.html.erb
+++ b/time-travel/app/views/posts/index.html.erb
@@ -10,5 +10,10 @@ There are currently <%= @posts.length %>
 <h4><%= link_to post.title, post_path(post) %></h4>
 <h6><%= post.post_date %>  </h6>
 <h6><%= post.description %> </h6>
+<h6><%= post.updated_at%></h6>
+<h6>By: <%= link_to post.user.first_name + " " + post.user.last_name, user_id_path(post.user.id)%></h6>
+
+
 
 <% end %>
+
