--- a/time-travel/app/views/periods/show.html.erb
+++ b/time-travel/app/views/periods/show.html.erb
@@ -1,3 +1,4 @@
+
 <h3>Period!</h3>
 
   <div class="period">
@@ -8,10 +9,16 @@
       <h2><%= @period.name %></h2>
       <h6><%= @period.start_time %> to <%= @period.end_time %></h6>
       <h4><%= @period.description %></h4>
-
+<% if current_user.id == @period.user_id %>
       <%= link_to "Edit", period_edit_path(@period.id) %>
       <%= button_to "Delete", period_delete_path(@period), method: :delete, params: {period_id: @period.id} %>
 
+    <% if flash[:error] %>
+      <div class="notice">
+        <%= flash[:error] %>
+      </div>
+    <% end %>
+<% end %>
     </div>
 
 <h3>Affliated Posts</h3>
