--- a/time-travel/app/views/partials/_nav.html.erb
+++ b/time-travel/app/views/partials/_nav.html.erb
@@ -1,21 +1,23 @@
 <ul id="dropdown1" class="dropdown-content">
-  <li>Create</li>
-  <li class="divider"></li>
   <li><%= link_to "Create Time Period", '/periods/new' %></li>
   <li><%= link_to "Create Event", '/posts/new'  %></li>
 </ul>
 
 <nav>
   <div class="nav-wrapper cyan">
-    <%= link_to "Travel Log", '/' %>
+    <ul>
+      <li> <%= link_to "Space Time Adventure Time", '/' %></li>
+    </ul>
     <ul class="right hide-on-med-and-down">
       <% if current_user != nil %>
-         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><%= link_to "All Events", '/posts' %></li>
+        <li><%= link_to "All Time Periods", '/periods' %></li>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Create<i class="material-icons right">arrow_drop_down</i></a></li>
       	<li><%= link_to "Profile", user_id_path(current_user)%>
       	<li><%= link_to "Logout", '/sessions', method: :delete %></li>
       <% else %>
-		<li><%= link_to "Signup", '/signup' %></li>
-		<li><%= link_to "Login", '/signin' %></li>
+		    <li><%= link_to "Signup", '/signup' %></li>
+		    <li><%= link_to "Login", '/signin' %></li>
     </ul>
   </div>
   <% end %>
