--- a/time-travel/app/views/users/new.html.erb
+++ b/time-travel/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
 <%= form_for @user do |f| %>
 
   <div>
-    <%= f.text_field :first_name, placeholder: "First Name" %>
+    <label><%= f.text_field :first_name, placeholder: "First Name" %>
   </div>
 
   <div>
