--- a/time-travel/app/views/users/show.html.erb
+++ b/time-travel/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
-<div>
-  Welcome, <%= @user.first_name %>
+<div class="nameDiv">
+  <h2><%= @user.first_name %> <%= @user.last_name%></h2>
 </div>
 <div>
-<%= image_tag(@user.image, :alt => "user image") %>
+	<img class="circle responsive-img" src="<%= @user.image%></img>">
 </div>
-<%= @user.created_at %>
+<br>
+User Since: <%= @user.created_at %>
 
 
 <div>Your Visit Places</div>
@@ -28,6 +29,45 @@
 
 <% end %>
 
-	<% if current_user.id == @user.id %>
-	  <%= button_to "Delete", user_id_path, :method =>:delete %>
-    <% end %>
+<% if current_user.id == @user.id %>
+	
+
+<!-- Modal Trigger -->
+
+  <button data-target="modal1" class="cyan btn modal-trigger">Edit Profile</button>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h3>Edit profile</h3>
+
+  		<%= form_for @user, url: update_user_path(@user), method: :patch  do |f| %>
+
+    	<div>
+      		<label>First Name</label><%= f.text_field :first_name, value: @user.first_name %>
+    	</div>
+
+    	<div>
+     		<label>Last Name</label><%= f.text_field :last_name, value: @user.last_name %>
+    	</div>
+
+    	<div>
+      		<label>Image</label><%= f.text_field :image, value: @user.image %>
+    	</div>
+
+    	<div class="modal-footer">
+      		<%=f.submit "Save", class:"cyan btn" %>
+    	</div>
+    	<% end %>
+  	</div>
+  </div>
+
+	<%= button_to 'User Settings', user_settings_path, class:"cyan btn", :method =>:get %>
+
+  <% end %>
+
+  <script>
+  $(document).ready(function(){
+    $('.modal-trigger').leanModal();
+  });
+  </script>
