--- a/time-travel/app/views/layouts/application.html.erb
+++ b/time-travel/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TimeTravel</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -18,6 +19,10 @@
 
 
 <%= yield %>
+
+<%=flash[:error] %>
+
+<br>
 
 <%=render 'partials/footer'%>
 
