--- a/time-travel/app/views/periods/edit.html.erb
+++ b/time-travel/app/views/periods/edit.html.erb
@@ -1,7 +1,7 @@
 Edit Time Period
 
 
-<%= form_for @period, url: '/periods/edit/#{@period.id}',  method: :patch do |f| %>
+<%= form_for @period, url: '/periods/'+@period.id.to_s,  method: :patch do |f| %>
   
   <label>Time Period Name</label>
   <div>
