--- a/time-travel/app/views/posts/show.html.erb
+++ b/time-travel/app/views/posts/show.html.erb
@@ -1,8 +1,9 @@
-<h3>Post!</h3>
+<h3>Time Log</h3>
 
 
 <img class="post-image-small" src="<%= @post.image %>" alt="image for post">
-<h4>Title:<%= @post.title  %></h4>
+<h4><%= @post.title  %></h4>
+<h6><%= link_to @post.user.first_name + " " + @post.user.last_name, user_id_path(@post.user.id)%></h6>
 <h5>Post Date:<%= @post.post_date %></h5>
 <h6>Description:<%= @post.description %> </h6>
 
@@ -10,6 +11,5 @@
 
 <%= button_to "Delete", delete_post_path(@post), method: :delete, params: {post_id: @post.id}, data: {confirm: "Are you sure?"}, :class => "btn" %>
 
-<h6>By: <%= link_to @post.user.first_name + " " + @post.user.last_name, user_id_path(@post.user.id)%></h6>
 <h6>Last Updated: <%=@post.updated_at%></h6>
 
