--- a/time-travel/app/views/posts/index.html.erb
+++ b/time-travel/app/views/posts/index.html.erb
@@ -1,19 +1,23 @@
-<h3>Posts!</h3>
+<div class="container">
 
-<div>
-There are currently <%= @posts.length %>
+	<h3>Events</h3>
+
+	<div>
+	There are currently <%= @posts.length %> events.
+	</div>
+
+	<% @posts.each do |post| %>
+	<hr>
+	<img class="post-image-small" src="<%= post.image %>" alt="image for post">
+	<h4><%= link_to post.title, post_path(post) %></h4>
+	<h6><%= post.post_date %>  </h6>
+	<h6><%= post.description %> </h6>
+	<h6><%= post.updated_at%></h6>
+	<h6>By: <%= link_to post.user.first_name + " " + post.user.last_name, user_id_path(post.user.id)%></h6>
+
+
+
+	<% end %>
+
 </div>
-
-<% @posts.each do |post| %>
-<hr>
-<img class="post-image-small" src="<%= post.image %>" alt="image for post">
-<h4><%= link_to post.title, post_path(post) %></h4>
-<h6><%= post.post_date %>  </h6>
-<h6><%= post.description %> </h6>
-<h6><%= post.updated_at%></h6>
-<h6>By: <%= link_to post.user.first_name + " " + post.user.last_name, user_id_path(post.user.id)%></h6>
-
-
-
-<% end %>
 
