--- a/time-travel/app/views/periods/show.html.erb
+++ b/time-travel/app/views/periods/show.html.erb
@@ -1,6 +1,4 @@
-
-<h3>Period!</h3>
-
+<div class="container">
   <div class="period">
     <div class="period-top">
       <img src=<%= @period.image %> alt="Period Img" class="post-image-small">
@@ -34,5 +32,6 @@
   
 
   </div>
+</div>
 
 
