--- a/time-travel/app/views/posts/edit.html.erb
+++ b/time-travel/app/views/posts/edit.html.erb
@@ -1,26 +1,28 @@
-Edit Page
+<div class="container">
+  Edit Post
 
-<%= form_for @post do |f| %>
-  
-  Post Title
-  <div>
-    <%= f.text_field :title, value: @post.title %>
-  </div>
-  
-  Post Description
-  <div>
-    <%= f.text_area :description, value: @post.description %>
-  </div>
-  
-  Post Date Field
-  <div>
-    <%= f.date_field :post_date, value: @post.post_date %>
-  </div>
+  <%= form_for @post do |f| %>
+    
+    Post Title
+    <div>
+      <%= f.text_field :title, value: @post.title %>
+    </div>
+    
+    Post Description
+    <div>
+      <%= f.text_area :description, value: @post.description %>
+    </div>
+    
+    Post Date Field
+    <div>
+      <%= f.date_field :post_date, value: @post.post_date %>
+    </div>
 
-  Click Image Link to Edit
-  <div>
-    <%= f.hidden_field :image, role: "uploadcare-uploader" %>
-  </div>
+    Click Image Link to Edit
+    <div>
+      <%= f.hidden_field :image, role: "uploadcare-uploader" %>
+    </div>
 
-  <%= f.submit "Save Post" %>
-<% end %>
+    <%= f.submit "Save Post" %>
+  <% end %>
+</div>
