--- a/time-travel/app/views/periods/new.html.erb
+++ b/time-travel/app/views/periods/new.html.erb
@@ -1,31 +1,32 @@
+<div class="container">
+  Create a Time Period
 
-Create Periods
+  <%= form_for @period do |f| %>
 
-<%= form_for @period do |f| %>
+    <div>
+      <%= f.text_field :name, placeholder: "Name" %>
+    </div>
 
-  <div>
-    <%= f.text_field :name, placeholder: "Name" %>
-  </div>
+    <div>
+      <%= f.text_area :description, placeholder: "Description" %>
+    </div>
+    
+    <label>Start Date (YYYY/MM/DD)</label>
+    <div>
+      <%= f.date_field :start_time, placeholder: "YYYY/MM/DD" %>
+    </div>
+    <label>End Date (YYYY/MM/DD)</label>
+    <div>
+      <%= f.date_field :end_time, placeholder: "YYYY/MM/DD" %>
+    </div>
 
-  <div>
-    <%= f.text_area :description, placeholder: "Description" %>
-  </div>
-  
-  <label>Period Start Date (YYYY/MM/DD)</label>
-  <div>
-    <%= f.text_field :start_time, placeholder: "YYYY/MM/DD" %>
-  </div>
-  <label>End Date (YYYY/MM/DD)</label>
-  <div>
-    <%= f.text_field :end_time, placeholder: "YYYY/MM/DD" %>
-  </div>
+    <div>
+      <%= f.hidden_field :image, role: "uploadcare-uploader" %>
+    </div>
 
-  <div>
-    <%= f.hidden_field :image, role: "uploadcare-uploader" %>
-  </div>
+    <%= f.submit "Create Period" %>
 
-  <%= f.submit "Create Period" %>
-
-<% end %>
+  <% end %>
+</div>
   
 
