--- a/time-travel/app/views/posts/new.html.erb
+++ b/time-travel/app/views/posts/new.html.erb
@@ -1,23 +1,25 @@
-Create New Post
+<div class="container">
+  Create New Post
 
-<%= form_for @post do |f| %>
-  <div>
-    <%= f.text_field :title, placeholder: "Title" %>
-  </div>
-  <div>
-    <%= f.text_area :description, placeholder: "Description" %>
-  </div>
+  <%= form_for @post do |f| %>
+    <div>
+      <%= f.text_field :title, placeholder: "Title" %>
+    </div>
+    <div>
+      <%= f.text_area :description, placeholder: "Description" %>
+    </div>
 
-  <div>
-    <%= f.date_field :post_date, placeholder: "Date" %>
-  </div>
+    <div>
+      <%= f.date_field :post_date, placeholder: "Date" %>
+    </div>
 
-  <div>
-    <%= f.hidden_field :image, role: "uploadcare-uploader" %>
-  </div>
-  
-  <%= f.submit "Create Post" %>
-<% end %>
+    <div>
+      <%= f.hidden_field :image, role: "uploadcare-uploader" %>
+    </div>
+    
+    <%= f.submit "Create Post" %>
+  <% end %>
+</div>
 
    
  
