--- a/time-travel/app/views/posts/show.html.erb
+++ b/time-travel/app/views/posts/show.html.erb
@@ -1,15 +1,14 @@
-<h3>Post!</h3>
+<div class="container showPost">
+	<img class="post-image-small" src="<%= @post.image %>" alt="image for post">
+	<h4>Title:<%= @post.title  %></h4>
+	<h5>Post Date:<%= @post.post_date %></h5>
+	<h6>Description:<%= @post.description %> </h6>
 
+	<%= link_to "Edit", edit_post_path(@post.id) %>
 
-<img class="post-image-small" src="<%= @post.image %>" alt="image for post">
-<h4>Title:<%= @post.title  %></h4>
-<h5>Post Date:<%= @post.post_date %></h5>
-<h6>Description:<%= @post.description %> </h6>
+	<%= button_to "Delete", delete_post_path(@post), method: :delete, params: {post_id: @post.id}, data: {confirm: "Are you sure?"}, :class => "btn" %>
 
-<%= link_to "Edit", edit_post_path(@post.id) %>
-
-<%= button_to "Delete", delete_post_path(@post), method: :delete, params: {post_id: @post.id}, data: {confirm: "Are you sure?"}, :class => "btn" %>
-
-<h6>By: <%= link_to @post.user.first_name + " " + @post.user.last_name, user_id_path(@post.user.id)%></h6>
-<h6>Last Updated: <%=@post.updated_at%></h6>
+	<h6>By: <%= link_to @post.user.first_name + " " + @post.user.last_name, user_id_path(@post.user.id)%></h6>
+	<h6>Last Updated: <%=@post.updated_at%></h6>
+</div>
 
