--- a/time-travel/app/views/posts/index.html.erb
+++ b/time-travel/app/views/posts/index.html.erb
@@ -1,19 +1,19 @@
-<h3>Posts!</h3>
+<h1 class="all-posts-index-title">Time Travel Posts!</h1>
 
-<div>
+<!-- <div>
 There are currently <%= @posts.length %>
+</div> -->
+
+	<% @posts.each do |post| %>
+	<hr>
+<div class="posts-container">	
+	<img class="post-image-small" src="<%= post.image %>" alt="image for post">
+	<h4 class="posts-time-travel-title"><%= link_to post.title, post_path(post) %></h4>
+	<h6 class="posts-time-travel-date"><%= post.post_date %>  </h6>
+	<h6 class="posts-time-travel-description"><%= post.description %> </h6>
+	<h6 class="posts-time-travel-updated"><%= post.updated_at%></h6>
+	<h6 class="posts-time-travel-by">By: <%= link_to post.user.first_name + " " + post.user.last_name, user_id_path(post.user.id)%></h6>
 </div>
-
-<% @posts.each do |post| %>
-<hr>
-<img class="post-image-small" src="<%= post.image %>" alt="image for post">
-<h4><%= link_to post.title, post_path(post) %></h4>
-<h6><%= post.post_date %>  </h6>
-<h6><%= post.description %> </h6>
-<h6><%= post.updated_at%></h6>
-<h6>By: <%= link_to post.user.first_name + " " + post.user.last_name, user_id_path(post.user.id)%></h6>
-
-
 
 <% end %>
 
