--- a/time-travel/app/views/posts/new.html.erb
+++ b/time-travel/app/views/posts/new.html.erb
@@ -1,10 +1,12 @@
-Create New Post
+<h1 class="posts-new-title">Create New Post</h1>
 
 <%= form_for @post do |f| %>
+  
   <div>
     <%= f.text_field :title, placeholder: "Title" %>
   </div>
-  <div>
+
+  <div class="new-post-description">
     <%= f.text_area :description, placeholder: "Description" %>
   </div>
 
@@ -12,11 +14,15 @@ Create New Post
     <%= f.date_field :post_date, placeholder: "Date" %>
   </div>
 
-  <div>
+  <div class="image-uploadcare-button">
+    <h6 class="new-post-image-text-for-button">Add Your Own Post Image!</h6>
     <%= f.hidden_field :image, role: "uploadcare-uploader" %>
   </div>
   
+  <div class="new-post-button">
   <%= f.submit "Create Post" %>
+  <div>
+
 <% end %>
 
    
